# testopengl

./: .gitignore  CMakeLists.txt  ImportedModel.cpp  ImportedModel.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  fragShader.glsl  main.cpp  sphere.cpp  sphere.h  test1.sln  utils.cpp  utils.h  vert.glsl  vertShader.glsl
test1/: redcoll.cpp  test1.cpp  test1.vcxproj
